...

  final TextEditingController staffStrengthCtrl = TextEditingController();

  final TextEditingController studentLocationCtrl = TextEditingController();

  static const List<String> standard = [
    'LKG',
    'UKG',
    '1st Standard',
    '2nd Standard',
    '3rd Standard',
    '4th Standard',
    '5th Standard',
...
            CustomDropDown(
              items: standard
                  .map((e) => DropdownMenuItem(value: e, child: Text(e)))
                  .toList(),
              onChanged: (val) => selectedStandard = val,
              value: selectedStandard,
              hint: 'Standard',
              validator: (val)=> textEmptyValidator(val, 'Standard is required!!'),
            ),
            CustomTextField(
              controller: studentLocationCtrl,
              label: 'Location of Student',
              suffixIcon: const Icon(Icons.location_on),
...
