class DbConstants {
  static const String schoolDbName = 'school';

  static const String todoListDbName = 'todolist';

  static const String studentsTableName = 'students';

  static const String idColumnName = 'id';

  static const String queueColumnName = 'queueId';

  static const String reqDataColumnName = 'reqdata';

  static const String queueItems = 'queue_items';

  static const String notRequiredToStoreInQueue = 'notRequiredToStoreInQueue';

  static const String isOfflineApi = 'isOfflineApi';

  static const String isFromQueue = 'isFromQueue';

  static const String priority = 'priority';

  static const String notSupportedOfflineErrorMsg =
      'Currently not supported Offline. Please retry when Online';

  static const String failedToProcessInOfflineErrorMsg =
      'Failed to process the data, Unexpected error occurred';
}

class SchoolDbConstants {
  static const String schoolsTableName = 'schools';

  static const String schoolDetailsTableName = 'school_details';

  static const String studentsTableName = 'students';

  static const String schoolIdColumnName = 'schoolId';
}
