...
          crossAxisAlignment: CrossAxisAlignment.start,
          children: <Widget>[
            Text(des(type)),
            Padding(
              padding: const EdgeInsets.symmetric(vertical: 8.0),
              child: customTextButton(
                  label: 'Dismiss',
                  callback: () => FeatureDiscovery.dismissAll(context)),
            )
          ],
        ),
        child: child,
      );
...
